adding junit-platform-commons to enable testrunning which did not work on intellij for windows